2008-07-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* configure.ac:
	* flumotion/test/Makefile.am:
	* env.in (added):
	* env (deleted):
	  Generate.

2008-07-02  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/encoders/aac/aac_wizard.py:
	* flumotion/component/encoders/mp3/mp3_wizard.py:
	Do not add a warning, requireElement is already
	adding an error.

2008-06-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/flv/vp6-wizard.glade:
	  Add the unit.

2008-06-27  Julien Moutte  <julien@fluendo.com>

	* flumotion/component/encoders/aac/aac.py: AAC+ v1 and v2 are
	supported by the Flash Player, let's use v2 right away in the
	component.

2008-06-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/aac/aac.py:
	  Also remove imports for i18n since the message is gone.

2008-06-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/aac/aac.py:
	  Remove backwards compatibility code as there is nothing to
	  be backwards-compatible with.
	* flumotion/component/encoders/aac/aac_wizard.py:
	  Simple cleanups.

2008-06-13  Julien Moutte  <julien@fluendo.com>

	* Makefile.am:
	* configure.ac:
	* flumotion/component/encoders/Makefile.am:
	* flumotion/component/encoders/aac/Makefile.am:
	* flumotion/component/encoders/aac/__init__.py:
	* flumotion/component/encoders/aac/aac.py:
	* flumotion/component/encoders/aac/aac.xml:
	* flumotion/component/encoders/aac/aac_wizard.py:
	* flumotion/component/muxers/flv/flv.xml:
	* flumotion/component/plugs/flashhttp/flashhttp.xml: Initial 
	import of AAC encoder component.

2008-06-04  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/encoders/flv/vp6.py:
	* flumotion/component/encoders/mp3/mp3.py:
	* flumotion/component/encoders/mp3/mp3_wizard.py:
	Update to the lastest flumotion import changes

2008-05-08  Johan Dahlin  <johan@flumotion.com>
